syntax = "proto3";

package chat;

service ComplaintService {
  rpc GetList(Complaint.GetListParams) returns (Complaint.GetListResponse);
  rpc Reply(Complaint.ReplyParams) returns (Complaint.ReplyResponse);
  rpc Delete(Complaint.DeleteParams) returns (Complaint.DeleteResponse);
  rpc GetUserComplaintList(GetUserComplaintListParams)
      returns (GetUserComplaintListResponse);
}

message Complaint {
  message GetListParams {
    string keyword = 1;
    string phone = 2;
    string startAt = 3;
    string endAt = 4;
    string type = 5;
    string status = 6;
    int32 pageSize = 7;
    int32 pageNum = 8;
  }

  message ListObject {
    int32 id = 1;
    string message = 2;
    string reply = 3;
    string memo = 4;
    string status = 5;
    repeated string photos = 6;
    string nickname = 7;
    string phone = 8;
    string created_at = 9;
    string uid = 10;
    string complaintable_type = 11;
    string u_nickname = 12;
    string c_name = 13;
    string user_uid = 14;
  }

  message GetListResponse {
    int32 totalCount = 1;
    repeated ListObject data = 2;
  }

  message ReplyParams {
    int32 id = 1;
    string reply = 2;
    string memo = 3;
  }

  message ReplyResponse { string status = 1; }

  message DeleteParams { int32 id = 1; }

  message DeleteResponse { string status = 1; }

  message userComplaintListObject {
    int32 id = 1;
    int32 user_id = 2;
    string nickname = 3;
    string phone = 4;
    repeated string photos = 5;
    string created_at = 6;
  }

  message GetUserComplaintListParams {
    int32 userId = 1;
    int32 pageNum = 2;
    int32 pageSize = 3;
    string date = 4;
  }

  message GetUserComplaintListResponse {
    int32 totalCount = 1;
    repeated userComplaintListObject data = 2;
  }
}